--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/hoabao0809/NJS101x_Assignment1_hoadnbFX16108-funix.edu.vn#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "connect-mongodb-session": "^3.1.1",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jquery-ui-multidatespicker": "^1.6.6",
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
