--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "html-pdf": "^3.0.1",
     "jquery-ui-multidatespicker": "^1.6.6",
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "pdf-creator-node": "^2.3.5",
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^18.0.5",
+    "uninstall": "^0.0.0"
   }
 }
